--- a/backend/spring-jpa-mysql/pom.xml
+++ b/backend/spring-jpa-mysql/pom.xml
@@ -18,7 +18,21 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+
 	<dependencies>
+	
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    </dependency>
+		
+		
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-mail</artifactId>
+    		<version>2.2.1.RELEASE</version>
+		</dependency>
 	
 		<dependency>
 		    <groupId>org.hibernate</groupId>
