--- a/backend/spring-jpa-mysql/src/main/resources/application.properties
+++ b/backend/spring-jpa-mysql/src/main/resources/application.properties
@@ -9,3 +9,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nikhillimaye10@gmail.com
+spring.mail.password=Niklim7318!
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
