Added Google OAuth

--- a/backend/spring-jpa-mysql/src/main/resources/application.properties
+++ b/backend/spring-jpa-mysql/src/main/resources/application.properties
@@ -10,6 +10,19 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
+server.port = 8081
+
+security.oauth2.client.clientId = 1043478044870-a5g717go7saft06gtr3q46dfgsp0aq63.apps.googleusercontent.com
+security.oauth2.client.clientSecret = -5nlkrFZC_KYu6oFN0fdXc9B
+security.oauth2.client.accessTokenUri  =  https://www.googleapis.com/oauth2/v3/token
+security.oauth2.client.userAuthorizationUri  =  https://accounts.google.com/o/oauth2/auth
+security.oauth2.client.tokenName = oauth_token
+security.oauth2.client.authenticationScheme = query
+security.oauth2.client.clientAuthenticationScheme = form
+security.oauth2.client.scope = profile email
+security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
+security.oauth2.resource.preferTokenInfo = false
+spring.main.allow-bean-definition-overriding=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
