--- a/backend/spring-jpa-mysql/pom.xml
+++ b/backend/spring-jpa-mysql/pom.xml
@@ -6,11 +6,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.1.RELEASE</version>
+		
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.testproject</groupId>
 	<artifactId>spring-security-jpa-mysql</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>spring-security-jpa-mysql</name>
 	<description>Demo project for Spring Boot</description>
 
