--- a/backend/spring-jpa-mysql/src/main/resources/application.properties
+++ b/backend/spring-jpa-mysql/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.main.allow-bean-definition-overriding=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nikhillimaye10@gmail.com
-spring.mail.password=Niklim7318!
+spring.mail.username=tribjoey905@gmail.com
+spring.mail.password=Macbook@2017
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
